manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: aa82107493
spec:
    ports:
    - port: 8080 
    selector:
        app: aa82107493
