manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: AA82107493-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82107493.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: AA82107493
            port:
              number: 8080
        pathType: Prefix
